Fix layout issues with grid.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,11 +3,24 @@
 	padding:0;
 	margin-right:-15px;
 }
-.grid--one-third {
-	width:33%;
-	display:inline-block;
-	padding-right:10px;
+
+@media (min-width:480px) {
+	.grid--one-third {
+		width:50%;
+		display:inline-block;
+		padding-right:10px;
+	}
 }
+
+@media (min-width:680px) {
+	.grid--one-third {
+		width:33%;
+		display:inline-block;
+		padding-right:10px;
+	}
+}
+
+
 
 .image--border {
 	border:1px solid #999;
